<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">哈里波弹唱</string>
    <string name="action_settings">Settings</string>
    <string name="yoga_guitar">瑜伽吉他</string>
    
    <string name="guitar_music">吉他谱</string>
    
    <string name="cancle">取消</string>
    
    <string name="musics">谱子</string>
    <string name="favorite">收藏</string>
    <string name="update">更新</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>
    
    <string name="start_update">开始更新</string>
    <string name="updating">正在更新</string>
    
    <string name="download">下载</string>
    <string name="start_download">开始下载</string>
    <string name="downloading">正在下载</string>
    <string name="version">版本:%1$</string>
    <string name="software">软件</string>
    <string name="download_finish">下载完成</string>
    <string name="current_is_newest_version">当前已经是最新版本</string>
    <string name="app_instrument">哈里波弹唱开发团队 版权所有\nAll Rights Reserved.</string>
    
    <string name="video_instrument">由于使用的服务器是按照流量收费的，所以请大家尽量在自己的存储卡允许的情况下，先下载后播放，这样能省些费用；如果存储卡较小，使用在线播放</string>
    <string name="video_local_play">本地播放</string>
    <string name="video_online_play">在线播放</string>
    <string name="video_download">视频下载</string>
    <string name="music_detail">和弦详情</string>
    <string name="video_is_downloading">%1$s正在下载，进入状态栏查看状态</string>
    <string name="video_is_wait_download">%1$s正在等待下载，进入状态栏查看状态</string>
    <string name="video_is_paused_download">%1$s下载被暂停，进入状态栏查看状态</string>
    <string name="video_activity_not_found">没有找视频播放软件</string>
    
    <string name="about_current_version">当前版本：%1$s</string>
    <string name="about_update_apk">立即更新应用</string>
    <string name="about_check_update_apk">检查新的应用</string>
    <string name="about_downloading_apk">下载应用</string>
    <string name="about_checking_update_apk">正在检查更新应用</string>
    <string name="about_apk_install">安装</string>
    <string name="about_download_error_io">下载失败，请检查文件系统是否满</string>
    <string name="about_download_error_net">下载失败，请检查网络</string>
    <string name="about_download_error">下载失败，请重试</string>
    <string name="about_network_error">网络错误，请检查网络后重试</string>
    <string name="about_error">发生错误</string>
   
    
    <string name="common_download_error_no_sdcard">存储卡不可用</string>
    <string name="commond_download_error_no_enough_space">没有足够的存储空间，请清理存储卡再尝试</string>
    <string name="video_space_not_enough">存储空间小于100M，无法下载视频</string>
    <string name="video_download_complete">%1$s下载完成</string>
     <string name="video_download_view_exception">您的系统问题，无法打开下载管理器</string>
    
    <string name="more_version_check">版本信息</string>
    
	<string name="pull_down_refresh">下拉刷新</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="is_loading">正在刷新&#8230;</string>
    
    <string name="loading_video">正在载入视频&#8230;</string>

</resources>
